gestion de rdv multiple ok

--- a/app/views/professionals/pro_index.html.erb
+++ b/app/views/professionals/pro_index.html.erb
@@ -4,10 +4,10 @@
     <%= render "all_service", selected_professional: nil %>
   </div>
 
-  <div class="text-center m-4" style="width: 100%;">
+  <div class="text-center py-4" style="width: 100%;">
     <h4><strong>Bienvenue sur votre tableau de bord</strong></h4>
-    <div class="custom-scroll" style="height: calc(85vh - 100px); overflow-y: auto">
-      <%= render "shared/day_calendar" %>
+    <div class="custom-scroll" style="height: calc(85vh - 45px); overflow-y: auto">
+      <%= render "day_calendar" %>
     </div>
   </div>
 </div>
