--- a/app/views/professionals/_all_slot_selected.html.erb
+++ b/app/views/professionals/_all_slot_selected.html.erb
@@ -8,13 +8,13 @@
     <% end_time = Time.parse("#{selected_date} #{end_hour}:00") %>
     <div data-appointment-target="times">
       <% while current_time <= end_time do %>
-        <%@appointment = Appointment.find_by(start_time: current_time, professional: professional)%>
-        <% if (@appointment.nil?) %>
+        <%@appointments = Appointment.where(start_time: current_time, professional: professional)%>
+        <% if (@appointments.empty?) %>
           <%= link_to current_time.strftime("%H:%M"), pro_show_user_path(current_user, professional,date: @selected_date, appointment: nil),
               class:"btn btn-outline-primary m-2",
               data: {time: current_time.strftime("%H:%M")}%>
         <% else %>
-          <%= link_to current_time.strftime("%H:%M"), pro_show_user_path(current_user, professional,date: @selected_date, appointment: @appointment),
+          <%= link_to current_time.strftime("%H:%M"), pro_show_user_path(current_user, professional,date: @selected_date, appointments: @appointments.map { |appointment| appointment.id }),  
               class:"btn btn-outline-primary m-2 btn-info text-dark",
               data: {time: current_time.strftime("%H:%M"),
                     turbo: false}%>
