--- a/app/views/professionals/_appointment_details.html.erb
+++ b/app/views/professionals/_appointment_details.html.erb
@@ -1,17 +1,16 @@
 <%= turbo_frame_tag :appointment_details do %>
-  <h5 class="text-start m-4"> <strong>Détail du rendez-vous : </strong> </h5>
   <% @appointment = Appointment.find(appointment) %>
   <div class="card_pro d-flex flex-row justify-content-between">
     <div>
       <div class="d-flex flex-row">
         <p>Nom : </p>
-        <h5 class="mx-2"> <strong><%= @appointment.user.first_name%> <%= @appointment.user.last_name%></strong></h5>
+        <p class="mx-2"> <%= @appointment.user.first_name%> <%= @appointment.user.last_name%></p>
       </div>
       <div class="d-flex flex-row">
         <p>Date : </p>
-        <h5 class="mx-2"> <strong><%= @appointment.start_time.strftime("%d-%m-%Y")%> à <%= @appointment.start_time.strftime("%H:%M")%></strong></h5>
+        <p class="mx-2"> <%= @appointment.start_time.strftime("%d-%m-%Y")%> à <%= @appointment.start_time.strftime("%H:%M")%></p>
       </div>
-      <div class="d-flex flex-row my-1 mt-4">
+      <div class="d-flex flex-row my-1">
         <p>Animal concerné : </p>
         <p class="mx-2"> <%= Pet.find(@appointment.pet_id).name%> </p>
       </div>
