--- a/app/views/professionals/pro_index.html.erb
+++ b/app/views/professionals/pro_index.html.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div class="text-center py-4" style="width: 100%;">
-    <h4><strong>Bienvenue sur votre tableau de bord</strong></h4>
+    <h4><strong>Emploi du temps de la semaine</strong></h4>
     <div class="custom-scroll" style="height: calc(85vh - 45px); overflow-y: auto">
       <%= render "day_calendar" %>
     </div>
