--- a/app/views/professionals/new.html.erb
+++ b/app/views/professionals/new.html.erb
@@ -1,7 +1,6 @@
 <div>
   <%= render "shared/back"%>
 </div>
-
 <%# title %>
 <div class=" text-center mb-4 d-flex flex-row justify-content-center">
   <h1>Créer un nouveau professionnel</h1>
@@ -50,8 +49,14 @@
                   %>
         </div>
       </div>
+      <%# photo %>
+      <div class="d-flex align-items-center justify-content-between">
+        <%= p.label :photo, "Photo :", class: "me-2 mb-0" %>
+        <div style="width: 65%;">
+          <%= p.input :photo, label: false, value: @professional.photo %>
+        </div>
+      </div>
     </div>
-
     <div class="card_pro col-lg-5 col-md-5 col-sm-10 p-4">
       <%# capacity %>
       <div class="d-flex align-items-start justify-content-between">
@@ -60,18 +65,45 @@
           <%= p.input :capacity, label: false%>
         </div>
       </div>
+      <%# slots definition %>
+      <% times = [] %>
+      <% 24.times do |i| %>
+        <% times << "#{i}:00" %>
+        <% times << "#{i}:30" %>
+      <% end %>
+      <%# start_hour %>
+      <div class="d-flex align-items-start justify-content-between">
+        <%= p.label :start_hour, "Horaire d'ouverture :", class: "me-2 mb-0" %>
+        <div style="width: 65%;">
+          <%= p.input :start_hour, label: false, collection: times%>
+        </div>
+      </div>
+      <%# end_hour %>
+      <div class="d-flex align-items-start justify-content-between">
+        <%= p.label :end_hour, "Horaire de fermeture :", class: "me-2 mb-0" %>
+        <div style="width: 65%;">
+          <%= p.input :end_hour, label: false, collection: times%>
+        </div>
+      </div>
+      <%# interval definition %>
+      <% intervals = [[30, '30 (0.5 heure)']] %>
+      <% 1.upto(8) do |i| %>
+        <% minutes = intervals.last[0] + 30 %>
+        <% hours = (minutes / 60.0).to_s + " heure#{'s' if minutes >= 60}" %>
+        <% intervals << [minutes, "#{minutes} (#{hours})"] %>
+      <% end %>
+      <%# interval %>
+      <div class="d-flex align-items-start justify-content-between">
+        <%= p.label :interval, "Durée d'un créneau de rendez-vous estimée (en minutes):", class: "me-2 mb-0" %>
+        <div style="width: 65%;">
+          <%= p.input :interval, label: false, collection: intervals.map { |minutes, display| [display, minutes] } %>
+        </div>
+      </div>
       <%# description %>
       <div class="d-flex align-items-start justify-content-between">
         <%= p.label :description, "Description :", class: "me-2 mb-0" %>
         <div style="width: 65%;">
           <%= p.input :description, label: false, as: :text, input_html: { rows: 4 } %>
-        </div>
-      </div>
-      <%# photo %>
-      <div class="d-flex align-items-center justify-content-between">
-        <%= p.label :photo, "Photo :", class: "me-2 mb-0" %>
-        <div style="width: 65%;">
-          <%= p.input :photo, label: false, value: @professional.photo %>
         </div>
       </div>
       <%# submit button %>
