--- a/app/views/simple_calendar/_calendar.html.erb
+++ b/app/views/simple_calendar/_calendar.html.erb
@@ -1,7 +1,7 @@
 <div class="simple-calendar">
   <div class="calendar-heading d-flex justify-content-between align-items-end">
     <%= link_to t('simple_calendar.previous', default: 'Précédente'), calendar.url_for_previous_view, class: "m-2" %>
-    <h5 class="m-2"> Les rendez-vous de la semaine pour tous les professionnels </h5>
+    <h5 class="m-2"> Les rendez-vous de la semaine </h5>
     <%= link_to t('simple_calendar.next', default: 'Suivante'), calendar.url_for_next_view, class: "m-2" %>
   </div>
 
@@ -9,7 +9,9 @@
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
-          <th><%= t('date.abbr_day_names')[day.wday] %></th>
+          <th>
+            <%= t('date.abbr_day_names')[day.wday] %>
+          </th>
         <% end %>
       </tr>
     </thead>
