--- a/app/views/professionals/new.html.erb
+++ b/app/views/professionals/new.html.erb
@@ -63,7 +63,6 @@
           <%= p.input :capacity, label: false%>
         </div>
       </div>
-
       <%# interval definition %>
       <% intervals = [[30, '30 (0.5 heure)']] %>
       <% 1.upto(8) do |i| %>
@@ -87,38 +86,39 @@
       </div>
     </div>
     <div class="card_pro col-lg-5 col-md-5 col-sm-10 p-4">
-      <h5 class="text-center my-3">Les horaires d'ouvertures</h5>
+      <h5 class="text-center mb-5" style="text-decoration: underline">Les horaires d'ouvertures</h5>
       <%# opening hours %>
       <%= p.fields_for :opening_hours do |h|%>
-          <div class="nested-fields">
-            <%# day %>
-            <div class="d-flex align-items-center justify-content-between">
-              <%= h.label :day_of_week, "Jour :", class: "me-2 mb-0" %>
-              <div style="width: 65%;">
-                <%= h.input :day_of_week, label: false, I18n.t('date.abbr_day_names').each_with_index.map { |day, index| [day, index] } %>
-              </div>
-            </div>
-            <%# opening time %>
-            <div class="d-flex align-items-center justify-content-between">
-              <%= h.label :open_time, "Heure d'ouverture :", class: "me-2 mb-0" %>
-              <div style="width: 65%;">
-                <%= h.input :open_time, label: false, as: :string, input_html: { data: { controller: "timepicker" } } %>
-              </div>
-            </div>
-            <%# closing time %>
-            <div class="d-flex align-items-center justify-content-between">
-              <%= h.label :clos_time, "Heure de fermeture :", class: "me-2 mb-0" %>
-              <div style="width: 65%;">
-                <%= h.input :close_time, label: false, as: :string, input_html: { data: { controller: "timepicker" } } %>
-              </div>
+        <div class="nested-fields d-flex flex-row justify-content-between my-2">
+          <%= h.hidden_field :day_of_week, value: h.object.day_of_week %>
+          <%= h.label "day_#{h.object.day_of_week}", I18n.t('date.abbr_day_names', locale: :fr)[h.object.day_of_week] %>
+          <div class="d-flex flex-row">
+          <%# opening time %>
+          <div class="d-flex flex-column align-items-center justify-content-between">
+            <%= h.label :open_time, "Heure d'ouverture :", class: "me-2 mb-0" %>
+            <div style="width: 65%;">
+              <%= h.input :open_time, label: false, as: :string, input_html: { data: { controller: "timepicker" } } %>
             </div>
           </div>
+          <%# closing time %>
+          <div class="d-flex flex-column align-items-center justify-content-between">
+            <%= h.label :clos_time, "Heure de fermeture :", class: "me-2 mb-0" %>
+            <div style="width: 65%;">
+              <%= h.input :close_time, label: false, as: :string, input_html: { data: { controller: "timepicker" } } %>
+            </div>
+          </div>
+          <%# closed %>
+          <div class="d-flex flex-column justify-content-center">
+            <%= h.check_box :closed %> Fermé
+          </div>
+          </div>
+        </div>
       <% end %>
-
-      <%# submit button %>
-      <div class="text-center my-4">
-        <%= p.button :submit, "Enregistrer", class: "btn btn-primary" %>
-      </div>
+    </div>
+    <%# submit button %>
+    <div class="text-center my-4">
+      <%= p.button :submit, "Enregistrer", class: "btn btn-primary" %>
     </div>
   </div>
+</div>
 <% end %>
