--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -55,7 +55,7 @@
               </div>
               <div class="card-body rounded-3">
                 <h5>
-                  <%= a.input :start_time, as: :string, input_html: { value: @time, readonly: true, style: 'border: none; text-align: center' }, label: false, required: true %>
+                  <%= a.input :start_time, as: :string, input_html: { value: @time.to_time.strftime("%H:%M"), readonly: true, style: 'border: none; text-align: center' }, label: false, required: true %>
                 </h5>
               </div>
             </div>
