--- a/app/views/professionals/_available_slots.html.erb
+++ b/app/views/professionals/_available_slots.html.erb
@@ -1,44 +1,41 @@
 <div class="m-2">
   <h4>Prochains rendez-vous disponibles</h4>
-  <% 7.times do |i| %>
+  <% count = 0 %>
+    <% i = 0 %>
+  <% while count < 8 do  %>
     <% date = (DateTime.current.to_date + i).strftime('%d-%m-%Y')%>
-    <div class="nav-item dropdown" data-controller="appointment-selected", data-appointment-selected-api-key-value=<%=professional.id%>>
-      <a href="#" class="btn btn-outline-primary w-100 m-1" data-appointment-selected-target="selectedDate">
-        <%# get all the appointments for this professional %>
-        <%= date %>
-        <% @appointments = Appointment.where(professional: professional, date: Time.parse(date))%>
-        <% @appointment_times = [] %>
-        <% @appointments.each do |appointment| %>
-          <% @appointment_times << appointment.start_time.strftime("%H:%M") %>
-        <% end%>
-      </a>
-      <%# show all available slot for appointment %>
-      <% slots = [] %>
-      <% start_hour = professional.start_hour # Heure de début
-          end_hour = professional.end_hour  # Heure de fin
-          interval = professional.interval  # Durée entre les créneaux en minutes
-      %>
-      <% current_time = Time.parse("#{start_hour}:00") %>
-      <% end_time = Time.parse("#{end_hour}:00") %>
-      <% while current_time <= end_time do %>
-        <% slots << current_time.strftime("%H:%M") %>
-            <% current_time += interval.minutes %>
-      <% end %>
-
-      <div  class="d-none d-flex justify-content-center mx-2"
+    <% professional_closed_day = professional.opening_hours.where(closed: true).pluck(:day_of_week)%>
+    <% availabilities = Availability.where("DATE(start_time) = ? AND professional_id = ?", Date.parse(date), professional.id)%>
+    <% if (!professional_closed_day.include?( Date.parse(date).wday)) && (!availabilities.empty? && availabilities.last.start_time > Time.now) %>
+      <div class="nav-item dropdown" data-controller="appointment-selected", data-appointment-selected-api-key-value="<%=professional.id%>">
+        <%# date button %>
+        <a href="#" class="btn btn-outline-primary w-100 m-1" data-appointment-selected-target="selectedDate">
+          <%# get all the appointments for this professional %>
+          <%= date %>
+          <% @appointments = Appointment.where(professional: professional, date: Time.parse(date))%>
+          <% @appointment_times = [] %>
+          <% @appointments.each do |appointment| %>
+            <% @appointment_times << appointment.start_time.strftime("%H:%M") %>
+          <% end%>
+        </a>
+        <%# show all availabilities for appointment %>
+        <div  class="d-none d-flex justify-content-center mx-2"
             data-appointment-selected-target="times"
             style="display: flex; flex-wrap: wrap;">
-        <% slots.each do |time| %>
-          <a href="<%=new_professional_appointment_path(professional)%>"
+          <% availabilities.each do |availability| %>
+            <a href="<%=new_professional_appointment_path(professional)%>"
               class="btn btn-outline-primary m-1
-                    <%= 'd-none' if (@appointment_times.include?(time) && @appointments.count==professional.capacity) || (Date.parse(date) == Date.today && time < Time.now.strftime('%H:%M')) %>"
+                    <%= 'd-none' if (@appointment_times.include?(availability.start_time.to_time) && @appointments.count==professional.capacity) || (Date.parse(date) == Date.today && availability.start_time.to_time < Time.now.strftime('%H:%M')) %>"
               style="width: 22%;"
-              data-time="<%= time %>"
+              data-time="<%= availability.start_time.to_time %>"
               data-action="click->appointment-selected#confirm">
-            <%= time %>
-          </a>
-        <%end%>
+              <%= availability.start_time.strftime("%H:%M") %>
+            </a>
+          <% end %>
+        </div>
       </div>
-    </div>
+      <% count += 1%>
+    <% end %>
+    <% i += 1 %>
   <% end %>
 </div>
