gestion de rendez-vous avec multi créneaux

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -43,7 +43,7 @@
           <p> Date du rendez-vous:</p>
         </div>
         <div class="card-body d-flex justify-content-center">
-          <h6 class="card-title"><%= @appointment.date.strftime("%d/%m/%Y") %></h6>
+          <h6 class="card-title"><%= @appointment.start_time.strftime("%d/%m/%Y") %></h6>
         </div>
       </div>
       <div class="card d-flex justify-content-center mb-3">
