--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -80,7 +80,7 @@
   <%# appointments to come %>
   <h3 class="mt-5 mb-4">Vos futurs rendez-vous</h3>
   <% if user_signed_in? %>
-    <% if @appointments.exists? %>
+    <% if !@appointments.empty? %>
       <% @appointments.each do |appointment| %>
         <a href="<%=professional_appointment_path(appointment.professional, appointment)%>" style="color: black; text-decoration: none;">
           <div class="d-flex justify-content-center">
@@ -89,11 +89,11 @@
                 <div class="d-flex justify-content-around fw-bold">
                   <div class="d-flex align-items-center">
                     <i class="fa-regular fa-calendar-days"></i>
-                    <p class="ms-3"><%= appointment.date.strftime("%d/%m/%Y") %></p>
+                    <%# <p class="ms-3"><%= appointment.availability.start_time.strftime("%d/%m/%Y") %></p> %>
                   </div>
                   <div class="d-flex align-items-center">
                     <i class="fa-regular fa-clock ms-5"></i>
-                    <p class="ms-3"><%= appointment.start_time.strftime("%H:%M") %></p>
+                    <%# <p class="ms-3"><%= appointment.availability.start_time.strftime("%H:%M") %></p> %>
                   </div>
                 </div>
               </div>
