--- a/app/views/professionals/_all_available_slots.html.erb
+++ b/app/views/professionals/_all_available_slots.html.erb
@@ -3,12 +3,13 @@
   <% @available_months.each do |month| %>
     <div class="nav-item dropdown" data-controller="all-available-slots" data-all-available-slots-api-key-value="<%= professional.id %>">
       <a href="#" class="btn btn-outline-primary w-100 m-1" data-action="click->all-available-slots#toggleMonth">
-        <%= I18n.t('date.month_names', locale: :fr)[Date::MONTHNAMES.index(month)] %>
+        <%= I18n.t('date.month_names', locale: :fr)[month] %>
       </a>
-      <% available_days_of_month = @availabilities.select { |a| Date::MONTHNAMES[a.start_time.month] == month }.map { |a| a.start_time.to_date }.uniq %>
+      <% available_days_of_month = @availabilities.select { |a| a.start_time.month == month }.map { |a| a.start_time.to_date }.uniq %>
       <div class="d-none d-flex flex-column justify-content-center mx-2 all-dates" data-all-available-slots-target="monthDates">
         <% available_days_of_month.each do |day| %>
           <div class="nav-item dropdown">
+
             <a href="#" class="btn btn-outline-primary w-100 m-1" data-action="click->all-available-slots#toggleDate">
               <%= day.strftime('%d-%m-%Y') %>
             </a>
