--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,9 @@
               <%= cl_image_tag current_user.photo.key, class: "avatar", alt: "dropdown menu", style: "object-fit: cover" %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" style="width: fit-content;" aria-labelledby="navbarDropdown">
-              <%= link_to "Mon organisme", pro_index_user_path(current_user), class: "dropdown-item" %>
+              <% if !current_user.orders.empty? %>
+                <%= link_to "Mon organisme", pro_index_user_path(current_user), class: "dropdown-item" %>
+              <%end%>
               <%= link_to "Mon profil", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Se déconnecter", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
