--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -58,7 +58,7 @@
               <div class="card_pro p-4 m-1 text-start" style="background-color: #f7e6d4;">
                 <div class="text-end">
                   <div >
-                    <p><%= a.date.strftime("%d/%m/%Y")%></p>
+                    <p><%= a.start_time.strftime("%d/%m/%Y")%></p>
                     <p><%= a.start_time.strftime("%H:%M")%></p>
                   </div>
                 </div>
